objects/ccrz__E_TransactionPayment__c.object
<CustomObject>
    <description>Transaction payments represent payments made to the system.</description>
    <fields>
        <fullName>ccrz__AccountNumber__c</fullName>
        <description>Account number of the payment.  For credit cards, etc. this is the last 4. For things like PO this would be the entire PO number.</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AccountType__c</fullName>
        <description>The account type of the payment, e.g. PO, Credit Card, etc.</description>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account of the user that created this transaction payment.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Transaction Payments</relationshipLabel>
        <relationshipName>TransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Amount__c</fullName>
        <description>Actual transaction amount.  Could be different than the requested amount.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account against which this transaction payment applies, e.g. the Bill To of the invoice.</description>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill To Transaction Payments</relationshipLabel>
        <relationshipName>BillToTransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the order this payment was applied to (optional).</description>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Transaction Payments</relationshipLabel>
        <relationshipName>TransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CCSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The cc subscription that this transaction applies to</description>
        <label>CC Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>CC Transaction Payments</relationshipLabel>
        <relationshipName>TransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Comments associated with the transaction.  These should normally be written when the transaction is created and then never touched.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact of the user that created this transaction payment.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Transaction Payments</relationshipLabel>
        <relationshipName>TransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <description>The CloudCraze current for this transaction.</description>
        <label>CurrencyISOCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ExpirationMonth__c</fullName>
        <description>The expiration month of the payment type, e.g. the Credit Card expiration month.</description>
        <label>Expiration Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ExpirationYear__c</fullName>
        <description>The expiration year of the payment type, e.g. for Credit Card this would be the expiration year.</description>
        <label>Expiration Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__InvoiceAppliedFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Invoice this payment was made for (optional).  In a summary invoice case this is the summary invoice.  For non-summary invoices this will be the same as the InvoiceAppliedTo field.</description>
        <label>Invoice Applied For</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>CC Transaction Payments For</relationshipLabel>
        <relationshipName>TransactionPaymentsFor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__InvoiceAppliedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Invoice this payment was applied to (optional).  This is the invoice that the payment was applied to.  In a summary invoice case this will be the child invoice the sub-payment was applied to.  For a non-summary case this will be the same as the applied for field.</description>
        <label>Invoice Applied To</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>CC Transaction Payments To</relationshipLabel>
        <relationshipName>TransactionPaymentsTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentTransactionPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a transaction payment is made against multiple items, e.g. multiple-invoices, a parent transaction payment may be used to store the core payment data but have child payments that then are used to track individual payment amounts against each individual item.</description>
        <label>Parent Transaction Payment</label>
        <referenceTo>ccrz__E_TransactionPayment__c</referenceTo>
        <relationshipLabel>CC Transaction Payments</relationshipLabel>
        <relationshipName>ChildTransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PaymentType__c</fullName>
        <description>Account specific sub-type of the account type, e.g. for Credit Card this would be the card type.</description>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__RequestAmount__c</fullName>
        <description>Requested amount of the transaction.</description>
        <label>Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__SoldTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account to which the original invoice or order was applied, e.g. the Sold To of the invoice or the Ship To of the order.</description>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sold To Transaction Payments (Sold To)</relationshipLabel>
        <relationshipName>SoldToTransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceTransactionPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to another transaction payment that was used as the source for this transaction.  E.g. in a AUTH, later CAPTURE scenario the AUTH would be the source transaction payment for the CAPTURE.  This allows the chaining of transactional data.</description>
        <label>Source Transaction Payment</label>
        <referenceTo>ccrz__E_TransactionPayment__c</referenceTo>
        <relationshipLabel>Sourced Transaction Payments</relationshipLabel>
        <relationshipName>SourcedTransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__StoredPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the original stored payment, if there is one</description>
        <label>Stored Payment</label>
        <referenceTo>ccrz__E_StoredPayment__c</referenceTo>
        <relationshipLabel>CC Transaction Payments</relationshipLabel>
        <relationshipName>CC_Transaction_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront associated with this payment.</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubAccountNumber__c</fullName>
        <description>Sub-account number to be used in addition to the account number.</description>
        <label>Sub Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Token__c</fullName>
        <description>Tokenized form of the payment</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TransactionCode__c</fullName>
        <description>Code associated with the transaction.  For example, for a credit card this would be the specific transaction returned from a payment.</description>
        <label>Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TransactionPaymentId__c</fullName>
        <description>External id used for data loading or other access</description>
        <externalId>true</externalId>
        <label>Transaction Payment Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__TransactionSubcode__c</fullName>
        <description>Used when a secondary code is required for the transaction.  For example, if the transaction failed this might contain the error code.</description>
        <label>Transaction Subcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TransactionTS__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The date/time when the transaction occurred.</description>
        <label>Transaction Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__TransactionType__c</fullName>
        <description>Type of the transaction, e.g. for a credit card this might be AUTH, CAPTURE, or AUTH+CAPTURE.  This is provider specific.</description>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that created this transaction payment.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TransactionPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__VerificationCode__c</fullName>
        <description>Secondary transaction code.</description>
        <label>Verification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Transaction Payment</label>
    <nameField>
        <displayFormat>TP-{0000000000}</displayFormat>
        <label>CC Transaction Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Transaction Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>